add:tailwind cssのCDNによる導入 コンフィグは未着手

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
 
+            }
+          }
+        }
+      }
+    </script>
+</head>
 <body>
     <header>
 
