--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 </head>
 <body>
     <header>
-
+        <!-- ミニロゴ ヒーローイメージが見える間は非表示-->
+        <img alt="しらけん！">
+        <ul>
+            <li><a href="#">このページについて</a></li>
+            <li><a href="#">工事中！<span>協力者募集中!!</span></a></li>
+            <li><a href="#">ストーリー</a></li>
+            <li><a href="#">ミュージック</a></li>
+            <li><a href="#">ギャラリー</a></li>
+            <li><a href="#">スタッフ</a></li>
+        </ul>
     </header>
     <!-- ヒーローイメージ -->
     <div></div>
