fix:このサイトについてのdivを追加

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </header>
     <!-- ヒーローイメージ -->
     <div></div>
+    <!-- このサイトについて -->
+    <div></div>
     <!-- WIP -->
     <div></div>
     <!-- ストーリー -->
