add:このサイトについて のurlを追加

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <!-- ヒーローイメージ -->
     <div></div>
     <!-- このサイトについて -->
-    <div></div>
+    <div>
+        <h2>このサイトについて</h2>
+        <p>
+            このサイト[<!-- url -->]は、ホロライブプロダクションのタレントが参加するMinecraftサーバー上で発生したグループの一つである、<wbr><span>不知火建設のファンサイトです。</span>
+        </p>
+    </div>
     <!-- WIP -->
     <div></div>
     <!-- ストーリー -->
