add:WIPセクションのhtmlを追加 注、discordリンクが未完成

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
         </p>
     </div>
     <!-- WIP -->
-    <div></div>
+    <div>
+        <p>このWebページ、</p>
+        <p>ガチ<span>で</span>工事中!</p>
+        <p>ファンアートの掲載許可や、デザインの提供、提案など。<wbr>素人でも、本職でも歓迎します。</p>
+        <!-- discordのサーバーリンクを掲載予定 -->
+        <a><img></a>
+    </div>
     <!-- ストーリー -->
     <div></div>
     <!-- ミュージック -->
