add:ストーリーセクションのhtmlを追加

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
         <a><img></a>
     </div>
     <!-- ストーリー -->
-    <div></div>
+    <div>
+        <h2>ストーリー</h2>
+        <!-- 時間とリンクするかは音楽投稿者と相談かも -->
+        <div>
+            <h3>第１話<time></time></h3>
+            <p>あらすじがここに入る</p>
+            <img alt="">
+        </div>
+    </div>
     <!-- ミュージック -->
     <div></div>
     <!-- キャラクター -->
