add:ミュージックセクションのhtmlを追加

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
 
+                    }
+                }
             }
-          }
         }
-      }
     </script>
 </head>
+
 <body>
     <header>
         <!-- ミニロゴ ヒーローイメージが見える間は非表示-->
@@ -36,7 +37,8 @@
     <div>
         <h2>このサイトについて</h2>
         <p>
-            このサイト[<!-- url -->]は、ホロライブプロダクションのタレントが参加するMinecraftサーバー上で発生したグループの一つである、<wbr><span>不知火建設のファンサイトです。</span>
+            このサイト[
+            <!-- url -->]は、ホロライブプロダクションのタレントが参加するMinecraftサーバー上で発生したグループの一つである、<wbr><span>不知火建設のファンサイトです。</span>
         </p>
     </div>
     <!-- WIP -->
@@ -58,7 +60,20 @@
         </div>
     </div>
     <!-- ミュージック -->
-    <div></div>
+    <div>
+        <h2>ミュージック</h2>
+        <p>
+            <!-- <創作者名> --> オリジナルサウンドトラック
+        </p>
+        <div>
+            <p>descriptions</p>
+            <ol>
+                <!-- index番号を追加予定 -->
+                <li><a href="https://youtube.com/playlist?list=PLc7YOCFEU7lmOQc21kgYoxU4Z_FvNSdBp&index=1"></a></li>
+            </ol>
+            <p> - 全nn曲</p>
+        </div>
+    </div>
     <!-- キャラクター -->
     <div></div>
     <!-- ギャラリー -->
