fixキャラクターセクションの位置を変更

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         <!-- discordのサーバーリンクを掲載予定 -->
         <a><img></a>
     </div>
+    <!-- キャラクター -->
+    <div>
+        
+    </div>
     <!-- ストーリー -->
     <div>
         <h2>ストーリー</h2>
@@ -74,8 +78,6 @@
             <p> - 全nn曲</p>
         </div>
     </div>
-    <!-- キャラクター -->
-    <div></div>
     <!-- ギャラリー -->
     <div></div>
     <!-- スタッフ -->
