--- a/index.html
+++ b/index.html
@@ -51,7 +51,33 @@
     </div>
     <!-- キャラクター -->
     <div>
-        
+        <!-- 社長と社員に置き換えてもいいかも -->
+        <h2>キャラクター</h2>
+        <div>
+            <!-- 名刺風に = コンポーネント化してもいいし、ここは画像でもいいかも。 -->
+            <div>
+                <img alt="不知火フレア">
+                <div>
+                    <h3>不知火フレア</h3>
+                </div>
+            </div>
+            <!-- クリック後の拡大表示 -->
+            <div>
+                <!-- 大きいイメージ -->
+                <img>
+                <div>
+                    <h3>不知火フレア</h3>
+                    <p>
+                        不知火建設社長/社員としての紹介をここに書く。
+                    </p>
+                    <h4>経歴</h4>
+                    <ul>
+                        <li>過去の行動について連ねる</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- 同様のものをあと４人分! -->
     </div>
     <!-- ストーリー -->
     <div>
