add:フッターにアイデアをコメントアウトで追記

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
     <div></div>
     <!-- スタッフ -->
     <div></div>
-    <footer></footer>
+    <footer>
+        <!-- 35pの作ったコーポレートサイトにリンクを貼るのがいいかも。 -->
+    </footer>
 </body>
 
 </html>
