add:スタッフセクションのhtmlを追加

--- a/index.html
+++ b/index.html
@@ -107,7 +107,22 @@
     <!-- ギャラリー -->
     <div></div>
     <!-- スタッフ -->
-    <div></div>
+    <div>
+        <!-- webページ開発者 -->
+        <h2>スタッフ<span>webページ製作者とその協力者</span></h2>
+        <h3>発案・コーディング</h3>
+        <div >
+            <img>
+            <div>
+                <h4>あんりーだぶる</h4>
+                <p></p>
+                <div>
+                    <a href="https://twitter.com/unreadable_jp">twitter</a>
+                    <a href="https://note.com/unreadablejp/">note</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <!-- 35pの作ったコーポレートサイトにリンクを貼るのがいいかも。 -->
     </footer>
