add:jQueryのCDNとそれを利用するshiraken.jsフィアルを追加

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             }
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="./shiraken.js"></script>
 </head>
 
 <body>
@@ -111,7 +114,7 @@
         <!-- webページ開発者 -->
         <h2>スタッフ<span>webページ製作者とその協力者</span></h2>
         <h3>発案・コーディング</h3>
-        <div >
+        <div>
             <img>
             <div>
                 <h4>あんりーだぶる</h4>
