--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <!--  -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- tailwind cssは本番環境では使ってはいけないらしい -->
     <script>
         tailwind.config = {
             theme: {
