--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
     </header>
     <!-- ヒーローイメージ -->
-    <div></div>
+    <div id="heroimage" style="height:100vh; background-color:gray"></div>
     <!-- このサイトについて -->
     <div>
         <h2>このサイトについて</h2>
