fix:ナビゲーションリンク用のidを追加

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         <!-- ミニロゴ ヒーローイメージが見える間は非表示-->
         <img alt="しらけん！">
         <ul>
-            <li><a href="#">このページについて</a></li>
-            <li><a href="#">工事中！<span>協力者募集中!!</span></a></li>
-            <li><a href="#">ストーリー</a></li>
-            <li><a href="#">ミュージック</a></li>
-            <li><a href="#">ギャラリー</a></li>
-            <li><a href="#">スタッフ</a></li>
+            <li><a href="#about">このページについて</a></li>
+            <li><a href="#wip">工事中！<span>協力者募集中!!</span></a></li>
+            <li><a href="#story">ストーリー</a></li>
+            <li><a href="#music">ミュージック</a></li>
+            <li><a href="#gallery">ギャラリー</a></li>
+            <li><a href="#staff">スタッフ</a></li>
         </ul>
     </header>
     <!-- ヒーローイメージ -->
     <div id="heroimage" style="height:100vh; background-color:gray"></div>
     <!-- このサイトについて -->
-    <div>
+    <div id="about">
         <h2>このサイトについて</h2>
         <p>
             このサイト[
@@ -47,7 +47,7 @@
         </p>
     </div>
     <!-- WIP -->
-    <div>
+    <div id="wip">
         <p>このWebページ、</p>
         <p>ガチ<span>で</span>工事中!</p>
         <p>ファンアートの掲載許可や、デザインの提供、提案など。<wbr>素人でも、本職でも歓迎します。</p>
@@ -55,7 +55,7 @@
         <a><img></a>
     </div>
     <!-- キャラクター -->
-    <div>
+    <div id="characters">
         <!-- 社長と社員に置き換えてもいいかも -->
         <h2>キャラクター</h2>
         <div>
@@ -85,7 +85,7 @@
         <!-- 同様のものをあと４人分! -->
     </div>
     <!-- ストーリー -->
-    <div>
+    <div id="story">
         <h2>ストーリー</h2>
         <!-- 時間とリンクするかは音楽投稿者と相談かも -->
         <div>
@@ -95,7 +95,7 @@
         </div>
     </div>
     <!-- ミュージック -->
-    <div>
+    <div id="music">
         <h2>ミュージック</h2>
         <p>
             <!-- <創作者名> --> オリジナルサウンドトラック
@@ -110,9 +110,9 @@
         </div>
     </div>
     <!-- ギャラリー -->
-    <div></div>
+    <div id="gallery"></div>
     <!-- スタッフ -->
-    <div>
+    <div id="staff">
         <!-- webページ開発者 -->
         <h2>スタッフ<span>webページ製作者とその協力者</span></h2>
         <h3>発案・コーディング</h3>
