remove,new:tailwind CDNの削除 output.cssの生成

--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
     <!--  -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- tailwind cssは本番環境では使ってはいけないらしい -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-
-                    }
-                }
-            }
-        }
-    </script>
+    <link href="./output.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="./shiraken.js"></script>
