update:スクロールイベントによるヘッダーの変形スクリプトを変更

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-    <header>
-        <!-- ミニロゴ ヒーローイメージが見える間は非表示-->
-        <img alt="しらけん！">
-        <ul>
+    <header class="fixed top-0 bg-orange-300">
+        <!-- <img alt="しらけん！"> -->
+        <ul class="flex justify-between">
             <li><a href="#about">このページについて</a></li>
             <li><a href="#wip">工事中！<span>協力者募集中!!</span></a></li>
             <li><a href="#story">ストーリー</a></li>
@@ -25,7 +24,7 @@
         </ul>
     </header>
     <!-- ヒーローイメージ -->
-    <div id="heroimage" style="height:100vh; background-color:gray"></div>
+    <div id="heroimage" class="w-screen h-screen bg-gray-500">test</div>
     <!-- このサイトについて -->
     <div id="about">
         <h2>このサイトについて</h2>
