add:仮の画像を追加

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </ul>
     </header>
     <!-- ヒーローイメージ -->
-    <div id="heroimage" class="w-full h-screen bg-gray-500"></div>
+    <!-- picture タグに置き換えてレスポンシブ対応したほうがいいかも -->
+    <div id="heroimage" class="w-full h-screen bg-heroimage bg-center">
+        test
+    </div>
 
     <!-- このサイトについて -->
     <div class="">
@@ -57,35 +60,35 @@
             <!-- 名刺風に = コンポーネント化してもいいし、ここは画像でもいいかも。 -->
             <!-- できれば紙のテクスチャ入れたい -->
             <div class="bg-white w-96 h-56 origin-bottom rotate-2 flex" data-modal-target="modal_flare">
-                <img alt="不知火フレア">
+                <img alt="不知火フレア" src="./images/facepic_dummy.png">
                 <div class="p-8">
                     <p class="text-lg">不知火建設 社長</p>
                     <h3 class="text-4xl mt-4">不知火 フレア</h3>
                 </div>
             </div>
             <div class="bg-white w-96 h-56 origin-bottom rotate-2 flex" data-modal-target="modal_polka">
-                <img alt="尾丸ポルカ">
+                <img alt="尾丸ポルカ" src="./images/facepic_dummy.png">
                 <div class="p-8">
                     <p class="text-lg">不知火建設</p>
                     <h3 class="text-4xl mt-4">尾丸 ポルカ</h3>
                 </div>
             </div>
             <div class="bg-white w-96 h-56 origin-bottom rotate-2 flex" data-modal-target="modal_miko">
-                <img alt="さくらみこ">
+                <img alt="さくらみこ" src="./images/facepic_dummy.png">
                 <div class="p-8">
                     <p class="text-lg">不知火建設</p>
                     <h3 class="text-4xl mt-4">さくら みこ</h3>
                 </div>
             </div>
             <div class="bg-white w-96 h-56 origin-bottom rotate-2 flex" data-modal-target="modal_suisei">
-                <img alt="星街すいせい">
+                <img alt="星街すいせい" src="./images/facepic_dummy.png">
                 <div class="p-8">
                     <p class="text-lg">不知火建設</p>
                     <h3 class="text-4xl mt-4">星街 すいせい</h3>
                 </div>
             </div>
             <div class="bg-white w-96 h-56 origin-bottom rotate-2 flex" data-modal-target="modal_noel">
-                <img alt="白銀ノエル">
+                <img alt="白銀ノエル" src="./images/facepic_dummy.png">
                 <div class="p-8">
                     <p class="text-lg">不知火建設</p>
                     <h3 class="text-4xl mt-4">白銀 ノエル</h3>
