--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
             </div>
         </div>
     </div>
+    <div>
+        <a href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw" data-hashtags="不知火建設"
+            class="twitter-hashtag-button" data-size="large" data-text="アニメ「しらけん!」ファンサイト"
+            data-url="https://anime-shiraken-fansite.github.io/shiraken-fansite/" data-lang="ja"
+            data-show-count="false"></a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
     <footer>
         <!-- 35pの作ったコーポレートサイトにリンクを貼るのがいいかも。 -->
     </footer>
