remove:YouTubeのiframeをコメントアウト 勝手にembedするのはまずかったなと思って。

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     <!-- ミュージック -->
     <div id="music" class="max-w-7xl m-auto p-8">
         <h2 class="text-center text-4xl">ミュージック</h2>
-        <iframe width="560" height="315" class="m-auto"
+        <!-- <iframe width="560" height="315" class="m-auto"
             src="https://www.youtube.com/embed/videoseries?list=PLc7YOCFEU7lmOQc21kgYoxU4Z_FvNSdBp"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allowfullscreen></iframe> -->
         <p>
             <!-- <創作者名> --> オリジナルサウンドトラック
         </p>
