add:ダミーのアイコン追加テスト

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="bg-orange-300 z-10">
         <!-- <img alt="しらけん！"> -->
         <ul class="flex flex-wrap justify-between px-8 text-xl">
-            <li class="p-2"><a href="#about">このページについて</a></li>
+            <li class="p-2 relative"><a href="#about" class="before:bg-dummyicon before:w-8 before:h-8 before:absolute before:-left-8">このページについて</a></li>
             <li class="p-2"><a href="#wip">工事中<span class="bg-yellow-500 text-red-700">協力者募集中!!</span></a></li>
             <li class="p-2"><a href="#story">ストーリー</a></li>
             <li class="p-2"><a href="#music">ミュージック</a></li>
