add:ハンバーガーメニューの挙動を追加

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body class="">
     <!-- スマホサイズへの対応が必要… -->
     <header class="bg-orange-300 z-10">
+        <button id="navigation_button" class="fixed top-0 right-0">btn</button>
         <!-- <img alt="しらけん！"> -->
-        <ul class="flex flex-wrap justify-between px-8 text-xl">
+        <ul id="navigation_list" class="flex flex-wrap justify-between px-8 text-xl overflow-y-hidden transition-all">
             <li class="p-2"><a href="#about">このページについて</a></li>
             <li class="p-2"><a href="#wip">工事中<span class="bg-yellow-500 text-red-700">協力者募集中!!</span></a></li>
             <li class="p-2"><a href="#story">ストーリー</a></li>
