--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
 </head>
 
 <body class="">
-    <!-- スマホサイズへの対応が必要… -->
-    <header class="bg-orange-300 z-10">
-        <button id="navigation_button" class="fixed top-0 right-0">btn</button>
+    <button id="navigation_button" class="fixed top-0 right-0 z-50 sm:hidden">MENU</button>
+    <nav id="navigation_wrap" class="fixed z-10 top-0 left-0 -translate-x-full sm:translate-x-0 transition-all">
         <!-- <img alt="しらけん！"> -->
-        <ul id="navigation_list" class="flex flex-wrap justify-between px-8 text-xl overflow-y-hidden transition-all">
-            <li class="p-2"><a href="#about">このページについて</a></li>
-            <li class="p-2"><a href="#wip">工事中<span class="bg-yellow-500 text-red-700">協力者募集中!!</span></a></li>
-            <li class="p-2"><a href="#story">ストーリー</a></li>
-            <li class="p-2"><a href="#music">ミュージック</a></li>
-            <li class="p-2"><a href="#gallery">ギャラリー</a></li>
-            <li class="p-2"><a href="#staff">スタッフ</a></li>
+        <ul id="navigation_list" class="flex flex-wrap flex-col w-auto h-screen justify-around text-xl sm:w-auto">
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#about">このページについて</a>
+            </li>
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#wip">工事中<span class="bg-yellow-500 text-red-700">協力者募集中!!</span></a>
+            </li>
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#story">ストーリー</a>
+            </li>
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#music">ミュージック</a>
+            </li>
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#gallery">ギャラリー</a>
+            </li>
+            <li class="w-full flex-grow">
+                <a class="bg-gray-200 block p-2 w-full h-full text-center align-middle" href="#staff">スタッフ</a>
+            </li>
+            <!-- ここにキャラクターイラスト挿し込むと面白いかも -->
         </ul>
-    </header>
+    </nav>
     <!-- ヒーローイメージ -->
     <!-- picture タグに置き換えてレスポンシブ対応したほうがいいかも -->
     <div id="heroimage" class="w-full h-screen bg-heroimage bg-center">
